@@ -74,11 +74,11 @@ my %sections = (
     "ga", 0,
     "gl", 0,
     "gu", 0,
-    "he", 0,
+    "he", 383,
     "hi", 0,
     "hr", 0,
     "hu", 121,
-    "id", 0,
+    "id", 369,
     "it", 60,
     "ja", 0,
     "ka", 0,
@@ -111,6 +111,7 @@ my %sections = (
     "th", 0,
     "tr", 157,
     "uk", 161,
+    "ur", 0,
     "vi", 116,
     "wa", 0,
     "zh_CN", 0,
@@ -143,11 +144,11 @@ my %rubriques = (
     "ga", 0,
     "gl", 0,
     "gu", 0,
-    "he", 0,
+    "he", 388,
     "hi", 0,
     "hr", 0,
     "hu", 123,
-    "id", 0,
+    "id", 374,
     "it", 66,
     "ja", 0,
     "ka", 0,
@@ -180,6 +181,7 @@ my %rubriques = (
     "th", 0,
     "tr", 158,
     "uk", 164,
+    "ur", 0,
     "vi", 117,
     "wa", 0,
     "zh_CN", 0,
@@ -213,11 +215,11 @@ my %rubriques_all = (
     "ga", 0,
     "gu", 0,
     "gl", 0,
-    "he", 0,
+    "he", 389,
     "hi", 0,
     "hr", 0,
     "hu", 124,
-    "id", 0,
+    "id", 14086,
     "it", 67,
     "ja", 0,
     "ka", 0,
@@ -250,6 +252,7 @@ my %rubriques_all = (
     "th", 0,
     "tr", 159,
     "uk", 165,
+    "ur", 0,
     "vi", 118,
     "wa", 0,
     "zh_CN", 0,
