@@ -1,3 +1,10 @@
+2008-10-13  Bruno coudoin  <bruno.coudoin@free.fr>
+
+	Added missing local like Hebrew.
+
+	* docs/gcompris2spip.pl:
+	* docs/spip_screenshot_remove.pl:
+
 2008-10-11  Bruno coudoin  <bruno.coudoin@free.fr>
 
 	- Added missing babyshapes/board8_*.xml
